# imgur-integration

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  imgur-service.c  parse.c
data/: Makefile.am  com.imgur.service.in  imgur-maemo.desktop  imgur-maemo.html  imgur-service-glue.xml  imgur.1  imgur.conf  imgur.service.xml.in
debian/: changelog  control  control-maemo  copyright  dirs  files  postinst  prerm  rules
src/: Makefile.am
src/cmd/: Makefile.am  imgur.c
src/dbus/: Makefile.am  action.c  action.h  clipboard.c  fetch.c  fetch.h  imgur-service.c  imgur-upload.h  list-records.c  list-records.h  list-remote.c  list-remote.h  parse.c  parse.h  prefs.c  prefs.h  recording.c  recording.h  test-fetch.c  test-list-records.c  test-parse.c  test-prefs.c  test-recording.c  test-upload.c  test-xmlscan.c  thurman-test.c  thurman-test.h  upload.c  upload.h  xmlscan.c  xmlscan.h
src/eog/: Makefile.am  eog-imgur-lsw.c  eog-imgur-lsw.h  eog-imgur-plugin.c  eog-imgur-plugin.h  eog-imgur-post.c  eog-imgur-post.h  eog-imgur-ui.c  eog-imgur-ui.h  imgur.eog-plugin
src/sharing/: Makefile.am  README  imgur-doc  plugin.c  send.c  validate.c
test/: server.py
tools/: enable-plugin.pl
tools/gehazi/: META.yml  Makefile.PL  README
tools/gehazi/lib/App/: Gehazi.pm
tools/gehazi/lib/App/Gehazi/: Config.pm  Hash.pm  Skin.pm
tools/gehazi/share/: template.html
